--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,7 +1,5 @@
 <header class="header">
-  <div class="band">
-
-  </div>
+  <div class="band"></div>
   <div class='header__container'>
     <div class='header__upper'>
       <div class='header__left'>
@@ -43,11 +41,80 @@
             </li>
           </ul>
         </div>
-        <button class='button button__azure'>
+        <a href='#' class='button button__azure'>
           Contactează-ne
           <img src="@img/icons/arrow-up-right.svg" alt="arrow">
-        </button>
+        </a>
       </div>
     </div>
   </div>
+  <nav class="header-nav">
+    <ul class='header-nav__list header-nav__container'>
+      <li class='nav-list__item'>
+        <a href="#">
+          <img src="@img/icons/home.svg" alt="home">
+        </a>
+      </li>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          BRD
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+        <ul class="submenu">
+          <li class='submenu__item'>
+            <a href="#">Despre noi</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Echipa</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Funcții vacante</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Rapoarte</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Contactează-ne</a>
+          </li>
+        </ul>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Transparență
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Implică-te
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Revenire
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Comunicare și Media
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Istorii de succes
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Informații utile
+          <img src="@img/icons/chevron-down.svg" alt="chevron-down">
+        </a>
+      </li>
+    </ul>
+  </nav>
 </header>
