--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -32,7 +32,6 @@
         align-items: center;
         gap: 15px;
     }
-
     .header__right{
         display: flex;
         align-items: center;
@@ -67,7 +66,6 @@
             }
         }
     }
-
     .header__search {
         width: 48px;
         transition: all 0.2s ease-out;
@@ -88,7 +86,97 @@
         }
     }
 
+    .header-nav {
+        background-color: $oxford;
+        &__list{
+            display: flex;
+            align-items: center;
+            .nav-list__item {
+                position: relative;
+                &:not(:first-of-type){
+                    padding-inline: 24px;
+                }
+                &:first-of-type {
+                    border-right: 1px solid #FFF;
+                    border-left: 1px solid #FFF;
+                    padding-inline: 17px;
+                    a  {
+                        img {
+                            width: 24px;
+                            height: 24px;
+                        }
+                    }
+                }
+                &.active {
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        left: 0;
+                        bottom: -8px;
+                        width: 100%;
+                        height: 4px;
+                        background: linear-gradient(90deg, #5182F6 0%, #FFD200 50%, #F3535B 100%);
+                    }
+                }
+                > a {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 6px;
+                    color: #FFF;
+                    padding: 16px 0;
+                    font-size: 16px;
+                    font-weight: 500;
+                    white-space: nowrap;
+                    transition: color 0.2s ease-out;
+                    
+                }
+                .submenu {
+                    position: absolute;
+                    top: calc(100% + 2px);
+                    left: -9999px;
+                    transform: translateY(-10px);
+                    width: fit-content;
+                    min-width: 200px;
+                    background-color: #FFF;
+                    z-index: 10;
+                    box-shadow: 0px 4px 30px 0px #84848426;
+                    opacity: 0;
+                    visibility: hidden;
+                    pointer-events: none;
+                    transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
+                    .submenu__item {
+                        width: 100%;
+                        height: 100%;
+                        padding: 16px 24px;
+                        a {
+                            color: $maincolor;
+                            font-size: 16px;
+                            font-weight: 400;
+                            white-space: nowrap;
+                            line-height: 24px;
+                        }
+                        &:hover {
+                            background-color: $oxford;
+                            a{
+                                color: #FFF;
+                            }
+                        }
+                    }
+                }
+                &:hover {
+                    .submenu {
+                        left: 0;
+                        opacity: 1;
+                        visibility: visible;
+                        pointer-events: all;
+                        transform: translateY(0px);
+                    }
+                }
+            }
+        }
 
+    }
 }
 
 // @keyframes fixedHeader {
