feat(ui): article component

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -21,7 +21,7 @@
             <img src="@img/icons/globe.svg" alt="glove">
           </button>
           <ul class='languages-list dropdown-menu'>
-            <li class='languages-list__item'>
+            <li class='languages-list__item current'>
               <button>
                 <img src="@img/icons/ro.svg" alt="ro">
                 <span>Română</span>
