--- a/src/scss/base/colors.scss
+++ b/src/scss/base/colors.scss
@@ -1,8 +1,8 @@
-// Brand 
-$azure: #5182F6;
-$oxford: #07214D;
-$yellow: #FFD200;
-$red: #F3535B;
+// Brand
+$azure: #5182f6;
+$oxford: #07214d;
+$yellow: #ffd200;
+$red: #f3535b;
 
 // Dark
 
@@ -18,4 +18,3 @@ $white500: rgba(255, 255, 255, 0.5);
 $white300: rgba(255, 255, 255, 0.3);
 $background: rgba(250, 250, 250, 1);
 $lines: rgba(237, 237, 237, 1);
-$lines100: rgba(237, 237, 237, 0.1);
