--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -1,182 +1,197 @@
 .header {
-    // &.sticky {
-    //     position: fixed;
-    //     width: 100%;
-    //     left: 0;
-    //     top: 0;
-    //     right: 0;
-    //     animation: fixedHeader 0.4s;
-    //     z-index: 5;
-    // }
+	// &.sticky {
+	//     position: fixed;
+	//     width: 100%;
+	//     left: 0;
+	//     top: 0;
+	//     right: 0;
+	//     animation: fixedHeader 0.4s;
+	//     z-index: 5;
+	// }
 }
 
-.header{
-    .band {
-        width: 100%;
-        height: 4px;
-        background: linear-gradient(90deg, #5182F6 0%, #FFD200 50%, #F3535B 100%);
-    }
-    .header__upper {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 20px 0;
-    }
-    .header__left {
-        display: flex;
-        align-items: center;
-        gap: 32px;
-    }
-    .header__logo{
-        display: flex;
-        align-items: center;
-        gap: 15px;
-    }
-    .header__right{
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        .languages {
-            >button {
-                position: relative;
-                z-index: 10;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 48px;
-                height: 48px;
-                border: 1px solid $lines;
-                border-radius: 8px;
-            }
-            .languages-list {
-                padding: 24px;
-                &__item {
-                    width: 96px;
-                    &:not(:last-child) {
-                        padding-bottom: 24px;
-                        margin-bottom: 24px;
-                        border-bottom: 1px solid $lines;
-                    }
-                    button {
-                        display: flex;
-                        align-items: center;
-                        gap: 8px;
-                    }
-                }
-            }
-        }
-    }
-    .header__search {
-        width: 48px;
-        transition: all 0.2s ease-out;
-        .header__search-button {
-            right: 0;
-            width: 46px;
-            height: 46px;
+.header {
+	.band {
+		width: 100%;
+		height: 4px;
+		background: linear-gradient(
+			90deg,
+			#5182f6 0%,
+			#ffd200 50%,
+			#f3535b 100%
+		);
+	}
+	.header__upper {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 20px 0;
+	}
+	.header__left {
+		display: flex;
+		align-items: center;
+		gap: 32px;
+	}
+	.header__logo {
+		display: flex;
+		align-items: center;
+		gap: 15px;
+	}
+	.header__right {
+		display: flex;
+		align-items: center;
+		gap: 12px;
+		.languages {
+			> button {
+				position: relative;
+				z-index: 10;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 48px;
+				height: 48px;
+				border: 1px solid $lines;
+				border-radius: 8px;
+			}
+			.languages-list {
+				padding: 24px;
+				&__item {
+					width: 96px;
+					&.current {
+						font-weight: 600;
+					}
+					&:not(:last-child) {
+						padding-bottom: 24px;
+						margin-bottom: 24px;
+						border-bottom: 1px solid $lines;
+					}
+					button {
+						display: flex;
+						align-items: center;
+						gap: 8px;
+					}
+				}
+			}
+		}
+	}
+	.header__search {
+		width: 48px;
+		transition: all 0.2s ease-out;
+		&:hover {
+			border-color: $azure;
+		}
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        &.active {
-            width: 300px;
-            input {
-                width: 100%;
-            }
-        }
-    }
+		&:has(input:focus) {
+			border: 1px solid $azure;
+		}
 
-    .header-nav {
-        background-color: $oxford;
-        &__list{
-            display: flex;
-            align-items: center;
-            .nav-list__item {
-                position: relative;
-                &:not(:first-of-type){
-                    padding-inline: 24px;
-                }
-                &:first-of-type {
-                    border-right: 1px solid #FFF;
-                    border-left: 1px solid #FFF;
-                    padding-inline: 17px;
-                    a  {
-                        img {
-                            width: 24px;
-                            height: 24px;
-                        }
-                    }
-                }
-                &.active {
-                    &::after {
-                        content: '';
-                        position: absolute;
-                        left: 0;
-                        bottom: -8px;
-                        width: 100%;
-                        height: 4px;
-                        background: linear-gradient(90deg, #5182F6 0%, #FFD200 50%, #F3535B 100%);
-                    }
-                }
-                > a {
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    gap: 6px;
-                    color: #FFF;
-                    padding: 16px 0;
-                    font-size: 16px;
-                    font-weight: 500;
-                    white-space: nowrap;
-                    transition: color 0.2s ease-out;
-                    
-                }
-                .submenu {
-                    position: absolute;
-                    top: calc(100% + 2px);
-                    left: -9999px;
-                    transform: translateY(-10px);
-                    width: fit-content;
-                    min-width: 200px;
-                    background-color: #FFF;
-                    z-index: 10;
-                    box-shadow: 0px 4px 30px 0px #84848426;
-                    opacity: 0;
-                    visibility: hidden;
-                    pointer-events: none;
-                    transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
-                    .submenu__item {
-                        width: 100%;
-                        height: 100%;
-                        padding: 16px 24px;
-                        a {
-                            color: $maincolor;
-                            font-size: 16px;
-                            font-weight: 400;
-                            white-space: nowrap;
-                            line-height: 24px;
-                        }
-                        &:hover {
-                            background-color: $oxford;
-                            a{
-                                color: #FFF;
-                            }
-                        }
-                    }
-                }
-                &:hover {
-                    .submenu {
-                        left: 0;
-                        opacity: 1;
-                        visibility: visible;
-                        pointer-events: all;
-                        transform: translateY(0px);
-                    }
-                }
-            }
-        }
+		.header__search-button {
+			right: 0;
+			width: 46px;
+			height: 46px;
 
-    }
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+		&.active {
+			width: 300px;
+			input {
+				width: 100%;
+			}
+		}
+	}
+
+	.header-nav {
+		background-color: $oxford;
+		&__list {
+			display: flex;
+			align-items: center;
+			.nav-list__item {
+				position: relative;
+				&:first-of-type {
+					border-right: 1px solid #fff;
+					border-left: 1px solid #fff;
+					a {
+						img {
+							width: 24px;
+							height: 24px;
+						}
+					}
+				}
+				&.active {
+					&::after {
+						content: '';
+						position: absolute;
+						left: 0;
+						bottom: -8px;
+						width: 100%;
+						height: 4px;
+						background: linear-gradient(
+							90deg,
+							#5182f6 0%,
+							#ffd200 50%,
+							#f3535b 100%
+						);
+					}
+				}
+				> a {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					gap: 6px;
+					color: #fff;
+					padding: 16px;
+					font-size: 16px;
+					font-weight: 500;
+					white-space: nowrap;
+					transition: color 0.2s ease-out;
+				}
+				.submenu {
+					position: absolute;
+					top: calc(100% + 2px);
+					left: -9999px;
+					transform: translateY(-10px);
+					width: fit-content;
+					min-width: 200px;
+					background-color: #fff;
+					z-index: 10;
+					box-shadow: 0px 4px 30px 0px #84848426;
+					opacity: 0;
+					visibility: hidden;
+					pointer-events: none;
+					transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
+					.submenu__item {
+						width: 100%;
+						height: 100%;
+						padding: 16px 24px;
+						a {
+							color: $maincolor;
+							font-size: 16px;
+							font-weight: 400;
+							white-space: nowrap;
+							line-height: 24px;
+						}
+						&:hover {
+							background-color: $oxford;
+							a {
+								color: #fff;
+							}
+						}
+					}
+				}
+				&:hover {
+					.submenu {
+						left: 0;
+						opacity: 1;
+						visibility: visible;
+						pointer-events: all;
+						transform: translateY(0px);
+					}
+				}
+			}
+		}
+	}
 }
 
 // @keyframes fixedHeader {
