--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,19 +39,19 @@ $mobileSmall: rem(479.98px);
 // Stilurile de baza
 @import 'base/null.scss';
 .wrapper {
-    min-width: 100%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    min-height: 100vh;
-    // Impingem footerul jos
-    > main {
-        flex: 1 1 auto;
-    }
-    // Fixarea sliderurilor
-    > * {
-        min-width: 0;
-    }
+	min-width: 100%;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
+	min-height: 100vh;
+	// Impingem footerul jos
+	> main {
+		flex: 1 1 auto;
+	}
+	// Fixarea sliderurilor
+	> * {
+		min-width: 0;
+	}
 }
 
 // Containerul
@@ -60,40 +60,40 @@ $mobileSmall: rem(479.98px);
    Exemplu: header__container, main__container, __container */
 
 @if ($responsiveType==1) {
-    [class*='__container'] {
-        @if ($maxWidthContainer>0) {
-            max-width: rem($maxWidthContainer + px);
-            box-sizing: content-box;
-            margin: 0 auto;
-        }
-        @if ($containerPadding>0) {
-            padding: 0 rem(math.div($containerPadding, 2) + px);
-        }
-    }
+	[class*='__container'] {
+		@if ($maxWidthContainer>0) {
+			max-width: rem($maxWidthContainer + px);
+			box-sizing: content-box;
+			margin: 0 auto;
+		}
+		@if ($containerPadding>0) {
+			padding: 0 rem(math.div($containerPadding, 2) + px);
+		}
+	}
 } @else {
-    [class*='__container'] {
-        margin: 0 auto;
-        @if ($maxWidthContainer>0) {
-            max-width: rem($maxWidthContainer);
-            box-sizing: content-box;
-        } @else {
-            @if ($containerPadding>0) {
-                padding: 0 rem(math.div($containerPadding, 2));
-            }
-        }
-        @media (max-width: $pc) {
-            max-width: rem(970px);
-        }
-        @media (max-width: $tablet) {
-            max-width: rem(750px);
-        }
-        @media (max-width: $mobile) {
-            max-width: none;
-            @if ($containerPadding>0 and $maxWidthContainer>0) {
-                padding: 0 rem(math.div($containerPadding, 2));
-            }
-        }
-    }
+	[class*='__container'] {
+		margin: 0 auto;
+		@if ($maxWidthContainer>0) {
+			max-width: rem($maxWidthContainer);
+			box-sizing: content-box;
+		} @else {
+			@if ($containerPadding>0) {
+				padding: 0 rem(math.div($containerPadding, 2));
+			}
+		}
+		@media (max-width: $pc) {
+			max-width: rem(970px);
+		}
+		@media (max-width: $tablet) {
+			max-width: rem(750px);
+		}
+		@media (max-width: $mobile) {
+			max-width: none;
+			@if ($containerPadding>0 and $maxWidthContainer>0) {
+				padding: 0 rem(math.div($containerPadding, 2));
+			}
+		}
+	}
 }
 
 // Conectarea stilurilor comune
@@ -104,5 +104,6 @@ $mobileSmall: rem(479.98px);
 @import 'components/__dropdown.scss';
 @import 'components/__burger.scss';
 @import 'components/__buttons.scss';
+@import 'components/__article.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
