--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -105,5 +105,6 @@ $mobileSmall: rem(479.98px);
 @import 'components/__burger.scss';
 @import 'components/__buttons.scss';
 @import 'components/__article.scss';
+@import 'components/__aside-menu.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
