--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,3 +1,184 @@
 <footer class="footer">
-
+  <div class="footer__container">
+    <div class="footer__nav">
+      <div class="footer__column">
+        <div class="footer__list">
+          <p>BRD:</p>
+          <ul>
+            <li>
+              <a href="#">Despre noi</a>
+            </li>
+            <li>
+              <a href="#">Echipa</a>
+            </li>
+            <li>
+              <a href="#">Funcții vacante</a>
+            </li>
+            <li>
+              <a href="#">Rapoarte</a>
+            </li>
+            <li>
+              <a href="#">Contactează-ne</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__list">
+          <p>Transparență:</p>
+          <ul>
+            <li>
+              <a href="#">Biroul și Diaspora</a>
+            </li>
+            <li>
+              <a href='#'>Cadrul legislativ</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__list">
+          <p>Implică-te:</p>
+          <ul>
+            <li>
+              <a href="#">Programe</a>
+            </li>
+            <li>
+              <a href="#">Platforma de implicare a experților din diaspora</a>
+            </li>
+            <li>
+              <a href="#">Investește acasă</a>
+            </li>
+            <li>
+              <a href="#">E-learning</a>
+            </li>
+            <li>
+              <a href="#">Implicare în proces decizional</a>
+            </li>
+            <li>
+              <a href="#">Lucrul cu punctele focale Diaspora Migrație Dezvoltare</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__list">
+          <p>Comunicare și Media:</p>
+          <ul>
+            <li>
+              <a href="#">Media</a>
+            </li>
+            <li>
+              <a href="#">Podcasturi</a>
+            </li>
+            <li>
+              <a href="#">Ghid de identitate vizuală</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__list">
+          <p>revenire::</p>
+          <ul>
+            <li>
+              <a href="#">Ghid pentru suport la revenire</a>
+            </li>
+            <li>
+              <a href="#">Unitatea de suport la revenire</a>
+            </li>
+            <li>
+              <a href="#">Istorii de succes</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__list">
+          <p>Informații utile:</p>
+          <ul>
+            <li>
+              <a href="#">Asociații și grupuri în diaspora</a>
+            </li>
+            <li>
+              <a href="#">Centre Educaționale</a>
+            </li>
+            <li>
+              <a href="#">Studiază limba română</a>
+            </li>
+            <li>
+              <a href="#">Platforme media ale diasporei</a>
+            </li>
+            <li>
+              <a href="#">Inițiative din diasporă</a>
+            </li>
+            <li>
+              <a href="#">Studii / Rapoarte / Evaluări</a>
+            </li>
+            <li>
+              <a href="#">Colaborare internațională</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__list">
+          <p>Rezultate:</p>
+          <ul>
+            <li>
+              <a href="#">Implicarea experților din diaspora</a>
+            </li>
+            <li>
+              <a href="#">Zilele Diasporei</a>
+            </li>
+            <li>
+              <a href="#">Congresul Diasporei</a>
+            </li>
+            <li>
+              <a href="#">Diaspora Business Forum</a>
+            </li>
+            <li>
+              <a href="#">Programe</a>
+            </li>
+            <li>
+              <a href="#">Limba română în diaspora</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer__column">
+        <div class="footer__list">
+          <p>Rețele sociale::</p>
+          <ul class='socials'>
+            <li>
+              <a href="#">
+                <img src="@img/icons/insta.svg" alt="insta">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="@img/icons/facebook.svg" alt="facebook">
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img src="@img/icons/twitter.svg" alt="twitter">
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__list">
+          <p>Date de contact:</p>
+          <ul>
+            <li>
+              <a href="#">Piața Marii Adunări Naționale, nr. 1</a>
+            </li>
+            <li>
+              <a href="tel:(022) 250-350">(022) 250-350</a>
+            </li>
+            <li>
+              <a href="tel:(022) 250-351">(022) 250-351</a>
+            </li>
+            <li><a href="mailto:brd@gov.md">brd@gov.md</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
