--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -1,16 +1,5 @@
-.header {
-    // &.sticky {
-    //     position: fixed;
-    //     width: 100%;
-    //     left: 0;
-    //     top: 0;
-    //     right: 0;
-    //     animation: fixedHeader 0.4s;
-    //     z-index: 5;
-    // }
-}
-
 .header{
+    background-color: #FFF;
     .band {
         width: 100%;
         height: 4px;
@@ -39,7 +28,7 @@
         .languages {
             >button {
                 position: relative;
-                z-index: 10;
+                z-index: 11;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -88,9 +77,26 @@
 
     .header-nav {
         background-color: $oxford;
+        @media (max-width: $tablet) {
+            position: absolute;
+            right: -40%;
+            width: 0;
+            height: 100%;
+            background-color: #FFF;
+            z-index: 100;
+            transition: .4s;
+        }
+        &.active {
+            right: 0;
+            width: 40%;
+        }
         &__list{
             display: flex;
             align-items: center;
+            @media (max-width: $tablet){
+                align-items: flex-start;
+                flex-direction: column;
+            }
             .nav-list__item {
                 position: relative;
                 &:not(:first-of-type){
@@ -100,12 +106,6 @@
                     border-right: 1px solid #FFF;
                     border-left: 1px solid #FFF;
                     padding-inline: 17px;
-                    a  {
-                        img {
-                            width: 24px;
-                            height: 24px;
-                        }
-                    }
                 }
                 &.active {
                     &::after {
@@ -129,13 +129,19 @@
                     font-weight: 500;
                     white-space: nowrap;
                     transition: color 0.2s ease-out;
-                    
+                    @media (max-width: $tablet) {
+                        color: $oxford;
+                        svg {
+                            path {
+                                stroke: $oxford;
+                            }
+                        }
+                    }
                 }
                 .submenu {
                     position: absolute;
                     top: calc(100% + 2px);
                     left: -9999px;
-                    transform: translateY(-10px);
                     width: fit-content;
                     min-width: 200px;
                     background-color: #FFF;
@@ -144,7 +150,7 @@
                     opacity: 0;
                     visibility: hidden;
                     pointer-events: none;
-                    transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
+                    transition: opacity 0.2s, visibility 0.2s;
                     .submenu__item {
                         width: 100%;
                         height: 100%;
@@ -170,20 +176,28 @@
                         opacity: 1;
                         visibility: visible;
                         pointer-events: all;
-                        transform: translateY(0px);
                     }
                 }
             }
         }
 
     }
+    &.sticky {
+        position: fixed;
+        width: 100%;
+        left: 0;
+        top: 0;
+        right: 0;
+        animation: fixedHeader 0.4s;
+        z-index: 5;
+    }
 }
 
-// @keyframes fixedHeader {
-//     from {
-//         transform: translateY(-50px);
-//     }
-//     to {
-//         transform: translateY(0);
-//     }
-// }
+@keyframes fixedHeader {
+    from {
+        transform: translateY(-50px);
+    }
+    to {
+        transform: translateY(0);
+    }
+}
