--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -7,8 +7,8 @@
 @font-face{
 	font-family:Onest;
 	font-display:swap;
-	src:url('../fonts/Onest-Light.woff2') format('woff2'), url('../fonts/Onest-Light.woff') format('woff');
-	font-weight: 300;font-style:normal;
+	src:url('../fonts/Onest-Bold.woff2') format('woff2'), url('../fonts/Onest-Bold.woff') format('woff');
+	font-weight: 700;font-style:normal;
 	}
 @font-face{
 	font-family:Onest;
@@ -19,8 +19,14 @@
 @font-face{
 	font-family:Onest;
 	font-display:swap;
-	src:url('../fonts/Onest-Medium.woff2') format('woff2'), url('../fonts/Onest-Medium.woff') format('woff');
-	font-weight: 500;font-style:normal;
+	src:url('../fonts/Onest-ExtraLight.woff2') format('woff2'), url('../fonts/Onest-ExtraLight.woff') format('woff');
+	font-weight: 200;font-style:normal;
+	}
+@font-face{
+	font-family:Onest;
+	font-display:swap;
+	src:url('../fonts/Onest-Light.woff2') format('woff2'), url('../fonts/Onest-Light.woff') format('woff');
+	font-weight: 300;font-style:normal;
 	}
 @font-face{
 	font-family:Onest;
@@ -37,18 +43,18 @@
 @font-face{
 	font-family:Onest;
 	font-display:swap;
+	src:url('../fonts/Onest-Medium.woff2') format('woff2'), url('../fonts/Onest-Medium.woff') format('woff');
+	font-weight: 500;font-style:normal;
+	}
+@font-face{
+	font-family:Onest;
+	font-display:swap;
 	src:url('../fonts/Onest-Thin.woff2') format('woff2'), url('../fonts/Onest-Thin.woff') format('woff');
 	font-weight: 100;font-style:normal;
 	}
 @font-face{
-	font-family:Onest;
+	font-family:icomoon;
 	font-display:swap;
-	src:url('../fonts/Onest-Bold.woff2') format('woff2'), url('../fonts/Onest-Bold.woff') format('woff');
-	font-weight: 700;font-style:normal;
-	}
-@font-face{
-	font-family:Onest;
-	font-display:swap;
-	src:url('../fonts/Onest-ExtraLight.woff2') format('woff2'), url('../fonts/Onest-ExtraLight.woff') format('woff');
-	font-weight: 200;font-style:normal;
+	src:url('../fonts/icomoon.woff2') format('woff2'), url('../fonts/icomoon.woff') format('woff');
+	font-weight: 400;font-style:normal;
 	}
