--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,19 +1,28 @@
 
-@layer base {
-	h1 {
-		@apply text-4xl font-bold
-	}
-	h2 {
-		@apply text-3xl font-bold
-	}
-	h3 {
-	}
-	h4 {
-	}
-	h5 {
-	}
-	h6 {
-    }
+h1 {
+	@include adaptiv-value("font-size", 48, 38, 1);
+	font-weight: 700;
+	line-height: 64px;
+}
+h2 {
+	@include adaptiv-value("font-size", 36, 28, 1);
+	font-weight: 700;
+}
+h3 {
+font-size: 32px;
+font-weight: 700;
+}
+h4 {
+	font-size: 24px;
+	font-weight: 700;
+}
+h5 {
+	font-size: 20px;
+	font-weight: 600;
+}
+h6 {
+	font-size: 16px;
+	font-weight: 500;
 }
 
 p {
@@ -60,4 +69,83 @@ p {
 input{
 	width: 100%;
 	outline: none;
+	border: none
+}
+
+.section-title {
+	margin-bottom: 20px;
+	display: flex;
+	align-items: center;
+	gap: 16px;
+}
+
+.media-item {
+	border: 1px solid $lines;
+	border-radius: 8px;
+	transition: .1s;
+	&:hover {
+		border-color: $oxford;
+		*{
+			border-color: $oxford;
+		}
+	}
+	> img {
+		padding: 16px;
+		border-bottom: 1px solid $lines;
+	}
+	&__body {
+		padding: 16px;
+		border-bottom: 1px solid $lines;
+		h6 {
+			line-height: 26px;
+			overflow: hidden;
+			display: -webkit-box;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
+			max-height: 5rem;
+			margin-bottom: 10px;
+		}
+		p {
+			line-height: 24px;
+			overflow: hidden;
+			display: -webkit-box;
+			-webkit-line-clamp: 3;
+			-webkit-box-orient: vertical;
+			max-height: 5rem;
+		}
+	}
+	&__footer {
+		padding: 16px 12px;
+		time  {
+			color: $dark700;
+		}
+	}
+}
+
+.links {
+	h4 {
+		margin-bottom: 20px;
+	}
+	&-item {
+		display: flex;
+		align-items: center;
+		gap: 10px;
+		border: 1px solid $lines;
+		padding: 16px;
+		border-radius: 8px;
+		margin-bottom: 10px;
+		transition: all .2s;
+		&:hover{
+			border-color: $oxford;
+			p {
+				text-decoration: underline;
+			}
+		}
+	}
+}
+
+.socials{
+	display: flex;
+	align-items: center;
+	gap: 10px;
 }
