fedotos(pages): full homepage

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -181,9 +181,15 @@
       </div>
     </div>
   </div>
-  <nav class="footer__link">
+  <nav class="footer__links">
     <a href="#">gov.md</a>
     <a href="#">cariere.gov.md</a>
     <a href="#">particip.gov.md</a>
   </nav>
+  <div class='footer__bottom'>
+    <div class="footer__container">
+      <p class='copyright'>Copyright © 2024. All rights reserved.</p>
+      <p>Guvernul Republicii Moldova. Biroul Relații cu Diaspora</p>
+    </div>
+  </div>
 </footer>
