--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -1,164 +1,167 @@
 @font-face {
-    font-family: 'icomoon';
-    src: url('fonts/icomoon.eot?aef8go');
-    src: url('../fonts/icomoon.woff') format('woff'), url('../fonts/icomoon.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: 'icomoon';
+  src: url('fonts/icomoon.eot?aef8go');
+  src: url('../fonts/icomoon.woff') format('woff'), url('../fonts/icomoon.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
 [class^='icon-'],
 [class*=' icon-'] {
-    font-family: 'icomoon' !important;
-    font-style: normal;
-    font-size: 20px;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  font-family: 'icomoon' !important;
+  font-style: normal;
+  font-size: 20px;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+
+.icon-check:before {
+  content: "\e900";
+}
+.icon-arrow-right:before {
+  content: "\e901";
+}
+.icon-arrow-up-right:before {
+  content: "\e902";
+}
+.icon-arrow-uturn-left:before {
+  content: "\e903";
+}
 .icon-bell:before {
-    content: "\e90e";
-  }
-  .icon-arrow-right:before {
-    content: "\e900";
-  }
-  .icon-arrow-up-right:before {
-    content: "\e901";
-  }
-  .icon-arrow-uturn-left:before {
-    content: "\e902";
-  }
-  .icon-chevron-double-right:before {
-    content: "\e903";
-  }
-  .icon-chevron-up:before {
-    content: "\e904";
-  }
-  .icon-chevron-down:before {
-    content: "\e905";
-  }
-  .icon-chevron-right-1:before {
-    content: "\e906";
-  }
-  .icon-chevron-right:before {
-    content: "\e907";
-  }
-  .icon-docx .path1:before {
-    content: "\e908";
-    color: rgb(157, 156, 155);
-  }
-  .icon-docx .path2:before {
-    content: "\e909";
-    margin-left: -1em;
-    color: rgb(107, 179, 236);
-  }
-  .icon-docx .path3:before {
-    content: "\e90a";
-    margin-left: -1em;
-    color: rgb(80, 143, 214);
-  }
-  .icon-docx .path4:before {
-    content: "\e90b";
-    margin-left: -1em;
-    color: rgb(55, 112, 195);
-  }
-  .icon-docx .path5:before {
-    content: "\e90c";
-    margin-left: -1em;
-    color: rgb(55, 112, 195);
-  }
-  .icon-docx .path6:before {
-    content: "\e90d";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-  }
-  .icon-link:before {
-    content: "\e90f";
-  }
-  .icon-search:before {
-    content: "\e910";
-  }
-  .icon-pin:before {
-    content: "\e911";
-  }
-  .icon-pdf .path1:before {
-    content: "\e912";
-    color: rgb(219, 219, 219);
-  }
-  .icon-pdf .path2:before {
-    content: "\e913";
-    margin-left: -1em;
-    color: rgb(239, 76, 73);
-    opacity: 0.2;
-  }
-  .icon-pdf .path3:before {
-    content: "\e914";
-    margin-left: -1em;
-    color: rgb(239, 76, 73);
-    opacity: 0.6;
-  }
-  .icon-pdf .path4:before {
-    content: "\e915";
-    margin-left: -1em;
-    color: rgb(239, 76, 73);
-  }
-  .icon-pdf .path5:before {
-    content: "\e916";
-    margin-left: -1em;
-    color: rgb(239, 76, 73);
-  }
-  .icon-pdf .path6:before {
-    content: "\e917";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-  }
-  .icon-pdf .path7:before {
-    content: "\e918";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-  }
-  .icon-pdf .path8:before {
-    content: "\e919";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-  }
-  .icon-video:before {
-    content: "\e91a";
-  }
-  .icon-x-mark:before {
-    content: "\e91b";
-  }
-  .icon-xlsx .path1:before {
-    content: "\e91c";
-    color: rgb(157, 156, 155);
-  }
-  .icon-xlsx .path2:before {
-    content: "\e91d";
-    margin-left: -1em;
-    color: rgb(105, 201, 151);
-  }
-  .icon-xlsx .path3:before {
-    content: "\e91e";
-    margin-left: -1em;
-    color: rgb(84, 173, 125);
-  }
-  .icon-xlsx .path4:before {
-    content: "\e91f";
-    margin-left: -1em;
-    color: rgb(43, 89, 61);
-  }
-  .icon-xlsx .path5:before {
-    content: "\e920";
-    margin-left: -1em;
-    color: rgb(61, 138, 88);
-  }
-  .icon-xlsx .path6:before {
-    content: "\e921";
-    margin-left: -1em;
-    color: rgb(255, 255, 255);
-  }
-  
+  content: "\e904";
+}
+.icon-chevron-double-right:before {
+  content: "\e905";
+}
+.icon-chevron-down-1:before {
+  content: "\e906";
+}
+.icon-chevron-down:before {
+  content: "\e907";
+}
+.icon-chevron-right-1:before {
+  content: "\e908";
+}
+.icon-chevron-right:before {
+  content: "\e909";
+}
+.icon-docx .path1:before {
+  content: "\e90a";
+  color: rgb(157, 156, 155);
+}
+.icon-docx .path2:before {
+  content: "\e90b";
+  margin-left: -1em;
+  color: rgb(107, 179, 236);
+}
+.icon-docx .path3:before {
+  content: "\e90c";
+  margin-left: -1em;
+  color: rgb(80, 143, 214);
+}
+.icon-docx .path4:before {
+  content: "\e90d";
+  margin-left: -1em;
+  color: rgb(55, 112, 195);
+}
+.icon-docx .path5:before {
+  content: "\e90e";
+  margin-left: -1em;
+  color: rgb(55, 112, 195);
+}
+.icon-docx .path6:before {
+  content: "\e90f";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.icon-link:before {
+  content: "\e911";
+}
+.icon-magnifying-glass:before {
+  content: "\e912";
+}
+.icon-map-pin:before {
+  content: "\e913";
+}
+.icon-pdf .path1:before {
+  content: "\e914";
+  color: rgb(219, 219, 219);
+}
+.icon-pdf .path2:before {
+  content: "\e915";
+  margin-left: -1em;
+  color: rgb(239, 76, 73);
+  opacity: 0.2;
+}
+.icon-pdf .path3:before {
+  content: "\e916";
+  margin-left: -1em;
+  color: rgb(239, 76, 73);
+  opacity: 0.6;
+}
+.icon-pdf .path4:before {
+  content: "\e917";
+  margin-left: -1em;
+  color: rgb(239, 76, 73);
+}
+.icon-pdf .path5:before {
+  content: "\e918";
+  margin-left: -1em;
+  color: rgb(239, 76, 73);
+}
+.icon-pdf .path6:before {
+  content: "\e919";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.icon-pdf .path7:before {
+  content: "\e91a";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.icon-pdf .path8:before {
+  content: "\e91b";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
+.icon-video-camera:before {
+  content: "\e91c";
+}
+.icon-x-mark:before {
+  content: "\e91d";
+}
+.icon-xlsx .path1:before {
+  content: "\e91e";
+  color: rgb(157, 156, 155);
+}
+.icon-xlsx .path2:before {
+  content: "\e91f";
+  margin-left: -1em;
+  color: rgb(105, 201, 151);
+}
+.icon-xlsx .path3:before {
+  content: "\e920";
+  margin-left: -1em;
+  color: rgb(84, 173, 125);
+}
+.icon-xlsx .path4:before {
+  content: "\e921";
+  margin-left: -1em;
+  color: rgb(43, 89, 61);
+}
+.icon-xlsx .path5:before {
+  content: "\e922";
+  margin-left: -1em;
+  color: rgb(61, 138, 88);
+}
+.icon-xlsx .path6:before {
+  content: "\e923";
+  margin-left: -1em;
+  color: rgb(255, 255, 255);
+}
