--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -29,6 +29,10 @@ h6 {
 p {
 }
 
+main {
+	margin: 20px 0;
+}
+
 .no-scrollbar {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
@@ -235,6 +239,29 @@ input {
 				background-color: $oxford;
 				color: white;
 			}
+		}
+	}
+}
+
+.subcompartiment{
+	height: 60vh;
+	&__container {
+		display: grid;
+		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+		gap: 10px;
+	}
+	&__button {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		height: 86px;
+		padding: 0 5px;
+		border: 1px solid $lines;
+		border-radius: 8px;
+		text-align: center;
+		transition: .2s;
+		&:hover {
+			border-color: $oxford;
 		}
 	}
 }
