fedotos(pages): team page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,3 +112,4 @@ $mobileSmall: rem(479.98px);
 @import 'components/__aside-menu.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
+@import 'team'
