feotos(pages): pages: articles, cards, team-single

--- a/src/components/aside-menu.html
+++ b/src/components/aside-menu.html
@@ -1,6 +1,6 @@
 <aside class="aside-menu">
 	<!-- TODO: asta o faci cu js sa se duca inapoi -->
-	<button class="button button__outline">Back</button>
+	<button class="button button__outline" id='back-button'>Back</button>
 
 	<nav class="aside-menu__navigation">
 		<ul>
