--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -110,6 +110,7 @@ $mobileSmall: rem(479.98px);
 @import 'components/__buttons.scss';
 @import 'components/__article.scss';
 @import 'components/__aside-menu.scss';
+@import 'components/__card.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
 @import 'team'
