--- a/src/scss/components/__dropdown.scss
+++ b/src/scss/components/__dropdown.scss
@@ -12,6 +12,7 @@
 		pointer-events: none;
 		transform: translateY(-10px);
 		transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+		z-index: 11;
 	}
 	&.active > .dropdown-button + .dropdown-menu {
 		opacity: 1;
