fedotos(pages): components - link, cards, guide-card

--- a/src/scss/components/__footer.scss
+++ b/src/scss/components/__footer.scss
@@ -1,6 +1,7 @@
 .footer {
   background-color: $oxford;
   color: #FFF;
+  margin-top: 80px;
   &__nav {
     display: flex;
     justify-content: space-between;
