--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -30,7 +30,7 @@
 .icon-arrow-up-right:before {
   content: "\e902";
 }
-.icon-arrow-uturn-left:before {
+.icon-arrow-return-left:before {
   content: "\e903";
 }
 .icon-bell:before {
