--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -155,7 +155,6 @@
 					position: absolute;
 					top: calc(100% + 2px);
 					left: -9999px;
-					transform: translateY(-10px);
 					width: fit-content;
 					min-width: 200px;
 					background-color: #fff;
@@ -164,7 +163,7 @@
 					opacity: 0;
 					visibility: hidden;
 					pointer-events: none;
-					transition: transform 0.2s, opacity 0.2s, visibility 0.2s;
+					transition: opacity 0.2s, visibility 0.2s;
 					.submenu__item {
 						width: 100%;
 						height: 100%;
@@ -190,7 +189,6 @@
 						opacity: 1;
 						visibility: visible;
 						pointer-events: all;
-						transform: translateY(0px);
 					}
 				}
 			}
