--- a/src/scss/team.scss
+++ b/src/scss/team.scss
@@ -1,77 +1,74 @@
 .team {
-  &__body{
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 50px 30px;
-    .team__item {
-      img {
-        width: 100%;
-        object-fit: cover;
-      }
-      h5 {
-        margin-top: 8px;
-        font-weight: 500;
-      }
-      p{
-        color: $dark700;
-      }
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 50px 30px;
+  .team__item {
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+    h5 {
+      margin-top: 8px;
+      font-weight: 500;
+    }
+    p{
+      color: $dark700;
     }
   }
 
-  &-single {
-    .profile {
-      border: 1px solid $lines;
-      border-radius: 8px;
-      &-main {
-        display: flex;
-        align-items: center;
-        gap: 24px;
-        padding: 24px;
-        border-bottom: 1px solid $lines;
+  .profile {
+    border: 1px solid $lines;
+    border-radius: 8px;
+    &-main {
+      display: flex;
+      align-items: center;
+      gap: 24px;
+      padding: 24px;
+      border-bottom: 1px solid $lines;
 
-        @media (max-width: $mobile) {
-            flex-direction: column;
-        }
-        
-        img  {
-          width: 100%;
-          max-width: 320px;
-        }
+      @media (max-width: $mobile) {
+          flex-direction: column;
+      }
+      
+      img  {
+        width: 100%;
+        max-width: 320px;
+      }
 
-        > ul {
-          li {
-            @include adaptiv-value("margin-bottom", 24, 15, 1);
-            h6 {
-              margin-bottom: 10px;
-            }
-            span {
-              font-size: 16px;
-              color: $dark700;
-            }
+      > ul {
+        li {
+          @include adaptiv-value("margin-bottom", 24, 15, 1);
+          h6 {
+            margin-bottom: 10px;
+          }
+          span {
+            font-size: 16px;
+            color: $dark700;
           }
         }
       }
-      &-details {
-        padding: 24px;
-        h5 {
+    }
+    &-details {
+      padding: 24px;
+      h5 {
+        margin-bottom: 10px;
+        font-weight: 500;
+      }
+      ul {
+        li {
+          display: flex;
+          gap: 10px;
+          color: $dark700;
+          width: fit-content;
           margin-bottom: 10px;
-          font-weight: 500;
-        }
-        ul {
-          li {
-            display: flex;
-            gap: 10px;
-            color: $dark700;
-            width: fit-content;
-            margin-bottom: 10px;
-            &::before {
-              content: '';
-              flex: 0 0 auto;
-              width: 3px;
-              height: 3px;
-              border-radius: 100%;
-              margin-top: 6px;
-              background-color: $dark700;
-            }
+          &::before {
+            content: '';
+            flex: 0 0 auto;
+            width: 3px;
+            height: 3px;
+            border-radius: 100%;
+            margin-top: 6px;
+            background-color: $dark700;
           }
         }
       }
