fedotos(pages): pagination component

--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -45,10 +45,16 @@
 .icon-chevron-down:before {
   content: "\e907";
 }
-.icon-chevron-right-1:before {
-  content: "\e908";
+.icon-chevron-pagination-left:before {
+  content: "\e907";
+}
+.icon-chevron-pagination-right:before {
+  content: "\e907";
 }
 .icon-chevron-right:before {
+  content: "\e908";
+}
+.icon-chevron-left:before {
   content: "\e909";
 }
 .icon-docx .path1:before {
