--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,6 +112,7 @@ $mobileSmall: rem(479.98px);
 @import 'components/__aside-menu.scss';
 @import 'components/__card.scss';
 @import 'components/__guide-card.scss';
+@import 'components/__pagination.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
 @import 'team'
