fedotos(pages) contact page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -115,4 +115,5 @@ $mobileSmall: rem(479.98px);
 @import 'components/__pagination.scss';
 // Conectarea stilurilor pentru pagini
 @import 'home';
-@import 'team'
+@import 'team';
+@import 'contact'
