pages(pages): rest of the pages

--- a/src/components/contact-modal.html
+++ b/src/components/contact-modal.html
@@ -2,8 +2,8 @@
   <button autofocus class='modal__close'>
     <i class=' icon-x-mark'></i>
   </button>
-  <h2>Newsletter</h2>
-  <p>Nu rata cele mai importante știri și anunțuri!</p>
+  <h2>Date de contact</h2>
+  <p>Lăsați datele dvs de contact și vom reveni cu un apel</p>
 
   <form class='modal__form'>
     <label for="lastname">
@@ -14,9 +14,9 @@
       <span>Prenume</span>
       <input type="text" placeholder='Alexandru' name='firstname' id='firstname'>
     </label>
-    <label for="country">
-      <span>Tara</span>
-      <input type="text" placeholder='Anglia' name='country' id='country'>
+    <label for="phone">
+      <span>Nr. de telefon</span>
+      <input type="tel" placeholder='069 352 170' name='phone' id='phone'>
     </label>
     <label for="email">
       <span>Email</span>
