--- a/src/components/guide-card.html
+++ b/src/components/guide-card.html
@@ -1,5 +1,4 @@
 <a href='#' class='guide-card'
-  style='background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-linear-gradient(180deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 100%), url("@img/card.jpeg") 50% 50% / cover no-repeat'>
+  style='background: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("@img/card.jpeg") 50% 50% / cover no-repeat'>
   <h4>Informație practică</h4>
 </a>
