--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -41,7 +41,7 @@
                 time {
                   color: $white800
                 }
-                span {
+                span, a {
                   color: #FFF;
                 }
               }
@@ -71,11 +71,11 @@
               border-radius: 8px;
               transition: .3s;
               &__prev {
-              }
-              &__next {
                 i {
                   transform: rotate(180deg);
                 }
+              }
+              &__next {
               }
               &:hover {
                 background-color: #FFFFFF;
