--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -69,8 +69,8 @@ main {
 	align-items: center;
 	gap: 10px;
 	border: 1px solid $lines;
-	padding: 12px;
 	border-radius: 8px;
+	padding-left: 12px;
 	transition: .2s;
 	> button {
 		width: 20px;
@@ -78,6 +78,9 @@ main {
 		position: absolute;
 		top: 50%;
 		transform: translateY(-50%);
+	}
+	> input {
+		padding: 12px 12px 12px 0;
 	}
 	&:hover {
 		border-color: $azure
@@ -272,7 +275,7 @@ input {
 }
 
 .subcompartiment{
-	height: 60vh;
+	min-height: 60vh;
 	&__container {
 		display: grid;
 		grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -282,8 +285,9 @@ input {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		height: 86px;
-		padding: 0 5px;
+		padding-inline: 5px;
+		@include adaptiv-value("padding-top", 30, 20, 1);
+		@include adaptiv-value("padding-bottom", 30, 20, 1);
 		border: 1px solid $lines;
 		border-radius: 8px;
 		text-align: center;
@@ -327,6 +331,11 @@ input {
 		transform: scaleX(1);
 		transform-origin: left;
 	}
+	&.active {
+		&::after{
+			transform: scaleX(1);
+		}
+	}
 }
 
 .categories {
@@ -356,6 +365,11 @@ input {
 	}
 	&-button {
 		padding: 16px 30px;
+		&.active {
+			&::after {
+				width: 100%;
+			}
+		}
 	}
 }
 
