fedotos(pages): fixes v2

--- a/src/components/accordion.html
+++ b/src/components/accordion.html
@@ -7,25 +7,25 @@
   </div>
   <div class='accordion-body'>
     <div class="accordion-associates__body">
-      <p class='h7'>
+      <strong>
         Association Culturelle Belgo Moldave "Casa Mare"
-      </p>
+      </strong>
       <p>Belgia, Bruxelles</p>
       <a href="mailto:lidia.sigarevschi@gmail.com">lidia.sigarevschi@gmail.com</a>
     </div>
     <div class="accordion-associates__body">
-      <p class='h7'>
+      <strong>
         Association Culturelle Belgo Moldave "Casa Mare"
-      </p>
+      </strong>
       <p>Belgia, Bruxelles</p>
       <a href="mailto:lidia.sigarevschi@gmail.com">lidia.sigarevschi@gmail.com</a>
     </div>
     <div class="accordion-associates__body">
-      <p class='h7'>
+      <strong>
         Association Culturelle Belgo Moldave "Casa Mare"
-      </p>
-      <p>Belgia, Bruxelles</p>
-      <a href="mailto:lidia.sigarevschi@gmail.com">lidia.sigarevschi@gmail.com</a>
+        </p>
+        <p>Belgia, Bruxelles</p>
+        <a href="mailto:lidia.sigarevschi@gmail.com">lidia.sigarevschi@gmail.com</a>
     </div>
     <!-- <p>
       BRD este o entitate guvernamentală din Republica Moldova responsabilă de relațiile cu cetățenii
