--- a/src/scss/components/__accordion.scss
+++ b/src/scss/components/__accordion.scss
@@ -71,7 +71,7 @@
         padding-bottom: 12px;
         margin-bottom: 12px;
       }
-      .h7 {
+      strong {
         color: $maincolor;
       }
       p, a {
