--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -5,7 +5,7 @@ h1 {
 	line-height: 64px;
 }
 h2 {
-	@include adaptiv-value("font-size", 36, 24, 1);
+	@include adaptiv-value("font-size", 36, 22, 1);
 	font-weight: 700;
 	line-height: 120%;
 }
@@ -27,7 +27,7 @@ h6 {
 	line-height: 28px;
 }
 
-.h7 {
+strong {
 	font-size: 16px;
 	font-weight: 500;
 }
@@ -39,6 +39,8 @@ p {
 main {
 	margin: 20px 0;
 }
+
+
 
 .no-scrollbar {
 	-ms-overflow-style: none;
