--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,11 +1,10 @@
-
 h1 {
-	@include adaptiv-value("font-size", 48, 38, 1);
+	@include adaptiv-value('font-size', 48, 38, 1);
 	font-weight: 700;
 	line-height: 64px;
 }
 h2 {
-	@include adaptiv-value("font-size", 36, 22, 1);
+	@include adaptiv-value('font-size', 36, 22, 1);
 	font-weight: 700;
 	line-height: 120%;
 }
@@ -14,11 +13,11 @@ h3 {
 	font-weight: 700;
 }
 h4 {
-	@include adaptiv-value("font-size", 24, 18, 1);
+	@include adaptiv-value('font-size', 24, 18, 1);
 	font-weight: 700;
 }
 h5 {
-	@include adaptiv-value("font-size", 20, 16, 1);
+	@include adaptiv-value('font-size', 20, 16, 1);
 	font-weight: 600;
 }
 h6 {
@@ -35,12 +34,6 @@ strong {
 p {
 	line-height: 22px;
 }
-
-main {
-	margin: 20px 0;
-}
-
-
 
 .no-scrollbar {
 	-ms-overflow-style: none;
@@ -73,7 +66,7 @@ main {
 	border: 1px solid $lines;
 	border-radius: 8px;
 	padding-left: 12px;
-	transition: .2s;
+	transition: 0.2s;
 	> button {
 		width: 20px;
 		height: 20px;
@@ -85,7 +78,7 @@ main {
 		padding: 12px 12px 12px 0;
 	}
 	&:hover {
-		border-color: $azure
+		border-color: $azure;
 	}
 	&-posts {
 		margin: 50px auto;
@@ -95,16 +88,16 @@ main {
 input {
 	width: 100%;
 	outline: none;
-	border: none
+	border: none;
 }
 
 .media-item {
 	border: 1px solid $lines;
 	border-radius: 8px;
-	transition: .1s;
+	transition: 0.1s;
 	&:hover {
 		border-color: $oxford;
-		*{
+		* {
 			border-color: $oxford;
 		}
 	}
@@ -135,7 +128,7 @@ input {
 	}
 	&__footer {
 		padding: 16px 12px;
-		time  {
+		time {
 			color: $dark700;
 		}
 	}
@@ -153,8 +146,8 @@ input {
 		padding: 16px;
 		border-radius: 8px;
 		margin-bottom: 10px;
-		transition: all .2s;
-		&:hover{
+		transition: all 0.2s;
+		&:hover {
 			border-color: $oxford;
 			p {
 				text-decoration: underline;
@@ -163,12 +156,11 @@ input {
 	}
 }
 
-.socials{
+.socials {
 	display: flex;
 	align-items: center;
 	gap: 10px;
 }
-
 
 .grid {
 	display: grid;
@@ -186,7 +178,7 @@ input {
 	@include adaptiv-value('gap', 30, 20, 1);
 
 	@media (max-width: $mobile) {
-		grid-template-columns:  1fr;
+		grid-template-columns: 1fr;
 		gap: 50px;
 	}
 }
@@ -196,7 +188,7 @@ input {
 	border-style: solid;
 	border-color: $lines;
 	padding: 24px;
-	background-color: #FAFAFA;
+	background-color: #fafafa;
 }
 
 .modal {
@@ -210,10 +202,10 @@ input {
 	border: none;
 	box-shadow: 0px 4px 30px 0px rgba(132, 132, 132, 0.15);
 	border-radius: 8px;
-	@include adaptiv-value("padding", 50, 15, 1);
-	
+	@include adaptiv-value('padding', 50, 15, 1);
+
 	&::backdrop {
-		background-color: rgba(0, 0, 0, 0.60);
+		background-color: rgba(0, 0, 0, 0.6);
 		opacity: 0.75;
 	}
 
@@ -249,7 +241,7 @@ input {
 				border-radius: 8px;
 				padding: 10px 12px;
 				font-size: 16px;
-				transition: .2s ease-out;
+				transition: 0.2s ease-out;
 				&:hover,
 				&:focus-within {
 					border-color: $dark500;
@@ -267,8 +259,8 @@ input {
 			border-radius: 8px;
 			padding: 10px 0;
 			text-transform: uppercase;
-			transition: .2s ease-out;
-			&:hover{
+			transition: 0.2s ease-out;
+			&:hover {
 				background-color: $oxford;
 				color: white;
 			}
@@ -276,7 +268,7 @@ input {
 	}
 }
 
-.subcompartiment{
+.subcompartiment {
 	min-height: 60vh;
 	&__container {
 		display: grid;
@@ -288,12 +280,12 @@ input {
 		align-items: center;
 		justify-content: center;
 		padding-inline: 5px;
-		@include adaptiv-value("padding-top", 30, 20, 1);
-		@include adaptiv-value("padding-bottom", 30, 20, 1);
+		@include adaptiv-value('padding-top', 30, 20, 1);
+		@include adaptiv-value('padding-bottom', 30, 20, 1);
 		border: 1px solid $lines;
 		border-radius: 8px;
 		text-align: center;
-		transition: .2s;
+		transition: 0.2s;
 		&:hover {
 			border-color: $oxford;
 		}
@@ -308,7 +300,7 @@ input {
 
 .page-title {
 	padding: 24px;
-	background-color: #FAFAFA;
+	background-color: #fafafa;
 	border: 1px solid $lines;
 	border-radius: 8px;
 	margin-bottom: 10px;
@@ -318,7 +310,7 @@ input {
 	position: relative;
 	border-bottom: 1px solid $lines;
 	&::after {
-		content: "";
+		content: '';
 		position: absolute;
 		bottom: -1px;
 		left: 0;
@@ -327,14 +319,14 @@ input {
 		background-color: $oxford;
 		transform: scaleX(0);
 		transform-origin: right;
-		transition: transform .3s;
+		transition: transform 0.3s;
 	}
 	&:hover::after {
 		transform: scaleX(1);
 		transform-origin: left;
 	}
 	&.active {
-		&::after{
+		&::after {
 			transform: scaleX(1);
 		}
 	}
@@ -343,7 +335,7 @@ input {
 .categories {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	@include adaptiv-value("gap", 24, 10, 1);
+	@include adaptiv-value('gap', 24, 10, 1);
 	margin-bottom: 24px;
 	@media (max-width: $mobile) {
 		grid-template-columns: repeat(2, 1fr);
@@ -363,7 +355,7 @@ input {
 	gap: 24px;
 	margin: 20px 0;
 	@media (max-width: $mobile) {
-			justify-content: center;
+		justify-content: center;
 	}
 	&-button {
 		padding: 16px 30px;
@@ -379,7 +371,7 @@ input {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	gap: 20px;
-	background-color: #FAFAFA;
+	background-color: #fafafa;
 	border: 1px solid $lines;
 	padding: 10px;
 	border-radius: 8px;
@@ -389,12 +381,12 @@ input {
 	margin-top: 10px;
 	border: 1px solid $lines;
 	border-radius: 8px;
-	transition: .2s;
+	transition: 0.2s;
 
 	&-item {
 		display: block;
 		width: 100%;
-		@include adaptiv-value("padding", 24, 18, 1);
+		@include adaptiv-value('padding', 24, 18, 1);
 		border-bottom: 1px solid $lines;
 		&:hover {
 			border-color: $azure;
@@ -407,8 +399,7 @@ input {
 		&__title {
 			font-size: 16px;
 			font-weight: 500;
-			transition: .2s;
-
+			transition: 0.2s;
 		}
 		&__details {
 			display: flex;
@@ -452,16 +443,16 @@ input {
 		}
 		&.video {
 			position: relative;
-			i{
+			i {
 				position: absolute;
 				top: 50%;
 				left: 50%;
 				transform: translate(-50%, -50%);
 				font-size: 24px;
-				color: #FFF;
+				color: #fff;
 			}
-			&::before{
-				content: "";
+			&::before {
+				content: '';
 				position: absolute;
 				inset: 0;
 				width: 100%;
@@ -477,7 +468,7 @@ input {
 	margin: 0;
 	border-width: 0;
 	.links-item {
-		&:last-child{
+		&:last-child {
 			border-bottom-width: 0px;
 		}
 	}
@@ -488,21 +479,21 @@ input {
 	align-items: center;
 	justify-content: center;
 	gap: 40px;
-	@include adaptiv-value("padding-top", 60, 30, 1);
-	@include adaptiv-value("padding-bottom", 60, 30, 1);
+	@include adaptiv-value('padding-top', 60, 30, 1);
+	@include adaptiv-value('padding-bottom', 60, 30, 1);
 	@media (max-width: $tablet) {
 		flex-direction: column-reverse;
 	}
 	img {
-		@include adaptiv-value("width", 610, 300, 1);
+		@include adaptiv-value('width', 610, 300, 1);
 	}
 	&__body {
-		p{
+		p {
 			color: $dark700;
 			margin-top: 8px;
 			margin-bottom: 24px;
 		}
-		a{
+		a {
 			display: block;
 			color: $oxford;
 			text-decoration: underline;
@@ -516,8 +507,8 @@ input {
 			max-width: 210px;
 			margin-top: 24px;
 			text-decoration: none;
-			&:hover{
-				color: #FFF;
+			&:hover {
+				color: #fff;
 			}
 		}
 	}
