feat(ui): some small ui modification

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -188,7 +188,7 @@
   </nav>
   <div class='footer__bottom'>
     <div class="footer__container">
-      <p class='copyright'>Copyright © 2024. All rights reserved.</p>
+      <p class='copyright'>Copyright © {year}. All rights reserved.</p>
       <p>Guvernul Republicii Moldova. Biroul Relații cu Diaspora</p>
     </div>
   </div>
