--- a/src/components/header.html
+++ b/src/components/header.html
@@ -22,22 +22,22 @@
           </button>
           <ul class='languages-list dropdown-menu'>
             <li class='languages-list__item current'>
-              <button>
+              <a href='#'>
                 <img src="@img/icons/ro.svg" alt="ro">
                 <span>Română</span>
-              </button>
+              </a>
             </li>
             <li class='languages-list__item'>
-              <button>
+              <a href='#'>
                 <img src="@img/icons/en.svg" alt="en">
                 <span>English</span>
-              </button>
+              </a>
             </li>
             <li class='languages-list__item'>
-              <button>
+              <a href='#'>
                 <img src="@img/icons/ru.svg" alt="ru">
                 <span>Русский</span>
-              </button>
+              </a>
             </li>
           </ul>
         </div>
@@ -127,109 +127,109 @@
   </nav>
 
   <nav class="header__nav--mobile">
-	@@include('./search.html')
-	
+    @@include('./search.html')
 
-		<ul class='header-nav__list header-nav__container'>
-			<li class='nav-list__item'>
-				<a href="#">
-					Principala
-				</a>
-			</li>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				BRD
-				<i class='icon-chevron-down'></i>
-			  </a>
-			  <ul class="submenu">
-				<li class='submenu__item'>
-				  <a href="#">Despre noi</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Echipa</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Funcții vacante</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Rapoarte</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Contactează-ne</a>
-				</li>
-			  </ul>
-			  <ul class="submenu">
-				<li class='submenu__item'>
-				  <a href="#">Despre noi</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Echipa</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Funcții vacante</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Rapoarte</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Contactează-ne</a>
-				</li>
-			  </ul>
-			  <ul class="submenu">
-				<li class='submenu__item'>
-				  <a href="#">Despre noi</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Echipa</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Funcții vacante</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Rapoarte</a>
-				</li>
-				<li class='submenu__item'>
-				  <a href="#">Contactează-ne</a>
-				</li>
-			  </ul>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				Transparență
-				<i class='icon-chevron-down'></i>
-			  </a>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				Implică-te
-				<i class='icon-chevron-down'></i>
-			  </a>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				Revenire
-				<i class='icon-chevron-down'></i>
-			  </a>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				Comunicare și Media
-				<i class='icon-chevron-down'></i>
-			  </a>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				Istorii de succes
-				<i class='icon-chevron-down'></i>
-			  </a>
-			</li>
-			<li class='nav-list__item'>
-			  <a href="#">
-				Informații utile
-				<i class='icon-chevron-down'></i>
-			  </a>
-			</li>
-		  </ul>
-  </div>
+
+    <ul class='header-nav__list header-nav__container'>
+      <li class='nav-list__item'>
+        <a href="#">
+          Principala
+        </a>
+      </li>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          BRD
+          <i class='icon-chevron-down'></i>
+        </a>
+        <ul class="submenu">
+          <li class='submenu__item'>
+            <a href="#">Despre noi</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Echipa</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Funcții vacante</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Rapoarte</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Contactează-ne</a>
+          </li>
+        </ul>
+        <ul class="submenu">
+          <li class='submenu__item'>
+            <a href="#">Despre noi</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Echipa</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Funcții vacante</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Rapoarte</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Contactează-ne</a>
+          </li>
+        </ul>
+        <ul class="submenu">
+          <li class='submenu__item'>
+            <a href="#">Despre noi</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Echipa</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Funcții vacante</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Rapoarte</a>
+          </li>
+          <li class='submenu__item'>
+            <a href="#">Contactează-ne</a>
+          </li>
+        </ul>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Transparență
+          <i class='icon-chevron-down'></i>
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Implică-te
+          <i class='icon-chevron-down'></i>
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Revenire
+          <i class='icon-chevron-down'></i>
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Comunicare și Media
+          <i class='icon-chevron-down'></i>
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Istorii de succes
+          <i class='icon-chevron-down'></i>
+        </a>
+      </li>
+      <li class='nav-list__item'>
+        <a href="#">
+          Informații utile
+          <i class='icon-chevron-down'></i>
+        </a>
+      </li>
+    </ul>
+    </div>
 </header>
