--- a/src/components/aside-menu.html
+++ b/src/components/aside-menu.html
@@ -6,7 +6,7 @@
 
 	<nav class="aside-menu__navigation">
 		<ul>
-			<li><a href="#">Despre noi</a></li>
+			<li class='active'><a href="#">Despre noi</a></li>
 			<li><a href="#">Echipa</a></li>
 			<li><a href="#">Funcții vacante</a></li>
 			<li><a href="#">Rapoarte</a></li>
