--- a/src/scss/components/__footer.scss
+++ b/src/scss/components/__footer.scss
@@ -42,25 +42,27 @@
       width: 100%;
       padding: 15px 0;
       color: #FFF;
+      text-align: center;
+      border-left: 1px solid $azure;
+      border-right: 1px solid $azure;
       @media (max-width: $mobileSmall) {
         font-size: 12px;
       }
       &:first-child {
         text-align: left;
         padding-left: 15px;
+        border-left: none;
         @media (max-width: $tablet) {
           text-align: center;
           padding-left: 0;
         }
       }
-      &:nth-child(2) {
-        text-align: center;
-        border-left: 1px solid $azure;
-        border-right: 1px solid $azure;
-      }
+
       &:last-child {
         text-align: right;
         padding-right: 15px;
+        border-right: none;
+
         @media (max-width: $tablet) {
           text-align: center;
           padding-right: 0;
