--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -61,21 +61,32 @@
 				border-radius: 8px;
 			}
 			.languages-list {
-				padding: 24px;
+				padding: 0;
+
 				&__item {
-					width: 96px;
+					width: auto;
+					padding: 0;
+					margin-bottom: 0;
 					&.current {
 						font-weight: 600;
 					}
 					&:not(:last-child) {
-						padding-bottom: 24px;
-						margin-bottom: 24px;
 						border-bottom: 1px solid $lines;
 					}
-					button {
+					&:last-child {
+						a {
+							border-radius: 0 0 4px 4px;
+						}
+					}
+					a {
+						padding: 16px;
 						display: flex;
 						align-items: center;
+						transition: 0.3s;
 						gap: 8px;
+						&:hover {
+							background-color: #e6e6e6;
+						}
 					}
 				}
 			}
@@ -140,10 +151,9 @@
 					display: flex;
 					align-items: center;
 					justify-content: center;
+					height: 55px;
 					gap: 6px;
 					color: #fff;
-					padding-top: 16px;
-					padding-bottom: 16px;
 					@include adaptiv-value('padding-inline', 16, 1, 1);
 					font-size: 16px;
 					font-weight: 500;
@@ -152,7 +162,7 @@
 				}
 				.submenu {
 					position: absolute;
-					top: calc(100% + 2px);
+					top: 100%;
 					left: -9999px;
 					width: fit-content;
 					min-width: 200px;
@@ -166,12 +176,13 @@
 					.submenu__item {
 						width: 100%;
 						height: 100%;
-						padding: 16px 24px;
+						padding: 15px 20px;
 						a {
 							color: $maincolor;
-							font-size: 16px;
+							font-size: 14px;
 							font-weight: 400;
 							white-space: nowrap;
+							text-transform: uppercase;
 							line-height: 24px;
 						}
 						&:hover {
