--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -23,7 +23,6 @@
               flex-direction: column;
               justify-content: flex-end;
               border-radius: 8px;
-              padding: 55px;
               transition: .45s ease-out;
               &:hover {
                 transform: scale(1.05);
@@ -39,14 +38,27 @@
                 gap: 8px;
                 margin-bottom: 12px;
                 time {
-                  color: $white800
+                  color: $white800;
+                  text-transform: uppercase;
                 }
                 span, a {
+                  text-transform: uppercase;
                   color: #FFF;
                 }
               }
-              h2 {
+              .hero__title{
+                font-size: 36px;
+                font-weight: 700;
+                line-height: 52px;
                 color: #FFF;
+                &::after {
+                  content: '';
+                  position: absolute;
+                  inset: 0;
+                  width: 100%;
+                  height: 100%;
+                  cursor: pointer;
+                }
               }
             }
           }
@@ -56,7 +68,7 @@
           top: 24px;
           right: 24px;
           height: 42px;
-          z-index: 10;
+          z-index: 4;
           &__arrows {
             display: flex;
             align-items: center;
