--- a/src/scss/components/__header.scss
+++ b/src/scss/components/__header.scss
@@ -174,10 +174,11 @@
 					pointer-events: none;
 					transition: opacity 0.2s, visibility 0.2s;
 					.submenu__item {
-						width: 100%;
-						height: 100%;
-						padding: 15px 20px;
 						a {
+							display: block;
+							width: 100%;
+							height: 100%;
+							padding: 15px 20px;
 							color: $maincolor;
 							font-size: 14px;
 							font-weight: 400;
@@ -260,8 +261,8 @@
 					border-top: 1px solid $lines;
 					width: 100%;
 					.submenu__item {
-						padding: 16px 20px;
 						a {
+							padding: 16px 20px;
 							color: $maincolor;
 							font-size: 16px;
 							font-weight: 400;
